# clean-axum

./: .env.example  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
api/: Cargo.toml
api/src/: init.rs  lib.rs
api/src/doc/: mod.rs  root.rs  user.rs
api/src/error/: adapter.rs  api.rs  base.rs  core.rs  handler.rs  mod.rs  traits.rs  user.rs
api/src/extractor/: json.rs  mod.rs  valid.rs
api/src/models/: mod.rs  request.rs  response.rs
api/src/routers/: blog.rs  mod.rs  root.rs  user.rs
api/src/validation/: mod.rs  rejection.rs
app/: Cargo.toml  README.md
app/src/: config.rs  lib.rs  state.rs
app/src/error/: mod.rs
app/src/persistence/: blog.rs
app/src/services/: user.rs
doc/: Cargo.toml
doc/src/: blog.rs  lib.rs  root.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000001_init.rs  m20240816_160144_blog.rs
models/: Cargo.toml  README.md
models/src/: lib.rs
models/src/domains/: blog.rs  mod.rs  prelude.rs  user.rs
models/src/params/: blog.rs  mod.rs  user.rs
models/src/queries/: blog.rs  user.rs
models/src/schemas/: blog.rs  user.rs
src/: main.rs  shuttle.rs  tokio.rs  utils.rs
tests/: mod.rs
tests/api/: blog.rs  mod.rs  root.rs  user.rs
tests/app/: mod.rs  user.rs
tests/app/persistence/: blog.rs  mod.rs  user.rs
utils/: Cargo.toml  README.md
utils/src/: db.rs  file.rs  lib.rs
utils/src/testing/: mod.rs
utils/src/testing/api/: mod.rs
utils/src/testing/db/: mod.rs
