[package]
name = "clean-axum"
version = "0.1.0"
edition = "2021"
publish = false

# docs
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "Axum scaffold with clean architecture"
license = "MIT"
readme = "README.md"

[workspace]
members = ["api", "app", "models", "migration"]

[dependencies]
api = { path = "api" }
migration = { path = "migration" }

tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.38.0", features = ["full"] }

# shuttle runtime
shuttle-axum = { version = "0.46.0", optional = true }
shuttle-runtime = { version = "0.46.0", optional = true }


[features]
default = []
shuttle = ["shuttle-axum", "shuttle-runtime"]
