[package]
name = "clean-axum"
version = "0.1.0"
edition = "2021"
publish = false

# docs
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "Axum scaffold with clean architecture"
license = "MIT"
readme = "README.md"

[workspace]
members = ["api", "app", "models", "migration", "utils"]

[dependencies]
api = { path = "api" }
utils = { path = "utils" }

tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.38.0", features = ["full"] }

# shuttle runtime
shuttle-axum = { version = "0.46.0", optional = true }
shuttle-runtime = { version = "0.46.0", optional = true }
shuttle-shared-db = { version = "0.46.0", features = [
    "postgres",
], optional = true }

[features]
default = []
shuttle = ["shuttle-axum", "shuttle-runtime", "shuttle-shared-db"]
