[package]
name = "clean-axum"
version = "0.1.0"
edition = "2021"
publish = false

# docs
authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
description = "Axum scaffold with clean architecture"
license = "MIT"
readme = "README.md"

[workspace]
members = ["api", "app", "doc", "models", "migration", "utils"]

[workspace.dependencies]
axum = { version = "0.7.5", default-features = false }
tower = { version = "0.4.13", default-features = false }
sea-orm = { version = "1.0.0-rc.7", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false }
tracing = "0.1.40"
utoipa = { version = "5.0.0-alpha.0", default-features = false }
validator = { version = "0.18", default-features = false }

[dependencies]
api = { path = "api" }
utils = { path = "utils" }
doc = { path = "doc" }

sea-orm = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# runtime
axum = { workspace = true, features = ["tokio", "http1", "http2"] }
tokio = { version = "1.38.0", features = ["full"] }

# shuttle runtime
shuttle-axum = { version = "0.46.0", optional = true }
shuttle-runtime = { version = "0.46.0", optional = true }
shuttle-shared-db = { version = "0.46.0", features = [
    "postgres",
], optional = true }

[dev-dependencies]
app = { path = "app" }
models = { path = "models" }

http-body-util = "0.1.2"
serde_json = { workspace = true }

[features]
default = []
shuttle = ["shuttle-axum", "shuttle-runtime", "shuttle-shared-db"]
