[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"
anyhow = "1.0.86"
dotenvy = "0.15.7"

# doc
utoipa = { version = "5.0.0-alpha.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = [
    "axum",
    "vendored",
], default-features = false }
utoipa-scalar = { version = "0.2.0-alpha.0", features = [
    "axum",
], default-features = false }

# local dependencies
app = { path = "../app" }
models = { path = "../models" }

[dev-dependencies]
