[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { workspace = true, features = ["macros", "query"] }
serde = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true, features = ["derive"] }

tower-http = { version = "0.5.2", features = ["fs"] }
tower-cookies = "0.10.0"
anyhow = "1.0.86"
dotenvy = "0.15.7"

# db
sea-orm = { workspace = true }

# doc
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = [
    "axum",
    "vendored",
], default-features = false }
utoipa-scalar = { version = "0.2.0-alpha.0", features = [
    "axum",
], default-features = false }

# local dependencies
app = { path = "../app" }
models = { path = "../models" }

[dev-dependencies]
