[package]
name = "doc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = [
    "axum",
    "vendored",
], default-features = false }
utoipa-scalar = { version = "0.2.0-alpha.0", features = [
    "axum",
], default-features = false }

api = { path = "../api" }
models = { path = "../models" }
