[package]
name = "models"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1.0.0-rc.7", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
utoipa = { version = "5.0.0-alpha.0" }
