[package]
name = "utils"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
migration = { path = "../migration" }

axum = { version = "0.7.5", default-features = false }
tower = { version = "0.4.13", default-features = false }
sea-orm = { version = "1.0.0-rc.7", default-features = false, features = [
    "sqlx-sqlite",
] }
